# autofff

./: .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  __init__.py  autofff.py  config.ini  generator.py  pyproject.toml  requirements.txt  scanner.py  setup.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
autofff/: __init__.py  __main__.py  autofff.py  clang_scanner.py  config.py  generator.py  scanner.py  utils.py
dependencies/: fff.patch
examples/: driver.h  example.h  generate_fakes.mk  included_header.h
examples/generate-via-makefile/: generate_fakes.mk
examples/simple-headers/: driver.h  hardware.h
test/: Makefile  app.c  app_tests.cc  app_unittest.cc  header_scanned_app_unittest.cc  smoketest_unittest.cc
